--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,7 @@
-certifi==2017.7.27.1
+certifi==2018.4.16
 chardet==3.0.4
-click==6.7
-dicttoxml==1.7.4
-dynaconf==0.4.5
-Flask==0.12
-idna==2.6
-itsdangerous==0.24
-Jinja2==2.9.6
-Markdown==2.6.8
-MarkupSafe==1.0
-python-apt==0.9.3.12
-requests==2.18.4
-six==1.10.0
-unattended-upgrades==0.1
-urllib3==1.22
-virtualenv==1.11.6
-Werkzeug==0.12.1
+idna==2.7
+pkg-resources==0.0.0
+PyYAML==3.13
+requests==2.19.1
+urllib3==1.23
